software26/03-sw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: software-server
  namespace: software
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: software
  template:
    metadata:
      labels:
        app: software
    spec:
      automountServiceAccountToken: false
      containers:
        - name: software
          image: suhannugul/software-eg:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
            limits:
              memory: "600Mi"
