software26/02-sw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: software-service
  namespace: software
spec:
  type: ClusterIP
  selector:
    app: software
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
