software26/04-sw-ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: software-ingress
  namespace: software
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    # ── 기본 설정 ──────────────────────────────────────────
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"


    # ── App Pod: Least Connection ──────────────────────────
    nginx.ingress.kubernetes.io/upstream-hash-by: ""    # 비활성 (RR or LeastConn)
    nginx.ingress.kubernetes.io/load-balance: "ewma"    # ewma = 가중 최소연결 (LeastConn 대체)
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aidoc.studylink.click
      secretName: aidoc-tls-prod
  rules:
    - host: aidoc.studylink.click
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: software-service      # App Pod 서비스
                port:
                  number: 8080
